--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,12 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "kadego"
-version = "0.1.0"
+version = "0.1.1"
 description = "A package to run bots for 漢字でGO!."
 readme = "README.md"
-license = {file = "LICENSE"}
+license = { file = "LICENSE" }
 authors = [
-    {name = "Moritz Eckert", email = "Moritz.Eckert@web.de"}
+    { name = "Moritz Eckert", email = "Moritz.Eckert@web.de" }
 ]
 dependencies = [
     "playwright >= 1.49.1",
@@ -18,3 +18,7 @@ dependencies = [
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[project.urls]
+Repository = "https://github.com/Moritz72/kadego"
+"Bug Tracker" = "https://github.com/Moritz72/kadego/issues"
